Add present tense exercises for Kodutöö 2025-07-28

--- a/kodutöö/20250728.md
+++ b/kodutöö/20250728.md
@@ -1,5 +1,27 @@
 # Kodutöö 2025-07-28
 
+
+## 1. Kirjuta olevikus.
+
+1. Koolis ei *kirjutata* (kirjutama) pliiatsiga, vaid pastakaga.
+2. Sünnipäevadel *tantsitakse* (tantsima).
+3. Täna ei *sõideta* (sõitma) maale.
+4. Laulupeol *lauldakse* (laulma).
+5. Kohvikus *pakutakse* (pakkuma) päevasuppi.
+6. Teade *antakse* (andma) kõigile edasi.
+7. Tänapäeval *peetakse* (pidama) sünnipäevi pigem väljas.
+8. Eestis *makstakse* (maksma) sageli pangakaardiga.
+9. Lastevanemate koosolekul *räägitakse* (rääkima) vahel liiga kaua.
+10. Poest *ostetakse* (ostma) tavaliselt piima, leiba ja saia.
+11. *Vaadatakse* (vaatama) telekat.
+12. Suvel *puhatakse* (puhkama) mere ääres. *Magatakse* (magama) nii kaua kui võimalik.
+13. Nädalavahetustel *istutakse* (istuma) telefonis.
+14. Tunnis ei *istuta* (istuma) telefonis.
+15. Bussipeatuses *oodatakse* (ootama) bussi.
+16. Vanematele ei *valetata* (valetama).
+17. Kinos *näidatakse* (näitama) häid filme.
+
+
 ## 2. Täida tabel.
 
 | -TUD vorm            | Mida tehakse?    | Mida tehti?   |
