Revise translation example in Chapter 24 for improved clarity

--- a/books/stalnuhhin/24.md
+++ b/books/stalnuhhin/24.md
@@ -46,7 +46,7 @@
 
 Переведите несколько отрывков из школьных сочинений.
 
-1. Iga inimene
+1. "Iga inimene, kui ta sööb, tahab nautida mitte ainult toitu, vaid ka söömist. Selleks et lauda kaunistada, valimegi turul värskeid katruleid, ilusaid mahlaseid tomateid ning isuäratavaid maasikaid. Arvan, et samal põhjusel soovib iga korralik inimsööja oma söögilaual näha mitte õnnetuid ja nakraid, vaid lõbusaid ning veetlevaid inimesi."
 
 ## Uus sõnavara
 
