--- a/kodutöö/20250828.md
+++ b/kodutöö/20250828.md
@@ -36,17 +36,17 @@
 
 ## Vastused
 
-1. See müra **härib** mind töö ajal. Этот шум беспокоит меня во время работы.
-2. Meie **kandis** avati uus raamatukogu. В нашем районе открылась новая библиотека.
-3. Naer **kostub** läbi avatud akna. Смех слышен через открытое окно.
-4. Koosolek **hakkab** kell kümme **pihta**. Совещание начинается в десять часов.
-5. Turvalisus **kaalub** mugavuse **üles**. Безопасность перевешивает комфорт.
-6. Naaber **lõugab** öösel trepikojas ja segab und. Сосед кричит во все горло в подъезде ночью и мешает спать.
-7. Planeerimisel **peame** kliendi vajadusi **silmas**. При планировании мы учитываем потребности клиента.
-8. Firma **teostab** testid sel nädalal. Компания проводит тесты на этой неделе.
-9. Uus **piirang** keelab parkimise öösiti. Новое ограничение запрещает парковку ночью.
-10. Seadme **paigaldus** võtab umbes kaks tundi. Установка устройства занимает около двух часов.
-11. Kass **poeb** laua alla, kui külalised tulevad. Кот заползает под стол, когда приходят гости.
-12. Hoone on **muinsuskaitse** all, seega remont vajab luba. Здание находится под охраной памятников старины, поэтому ремонт требует разрешения.
-13. Hind **oleneb** töömahust. Цена зависит от объема работы.
-14. Me **kolime** sügisel uude **asumisse**. Мы переезжаем осенью в новый микрорайон.
+1. See müra *härib* mind töö ajal. Этот шум беспокоит меня во время работы.
+2. Meie *kandis* avati uus raamatukogu. В нашем районе открылась новая библиотека.
+3. Naer *kostub* läbi avatud akna. Смех слышен через открытое окно.
+4. Koosolek *hakkab* kell kümme *pihta*. Совещание начинается в десять часов.
+5. Turvalisus *kaalub* mugavuse *üles*. Безопасность перевешивает комфорт.
+6. Naaber *lõugab* öösel trepikojas ja segab und. Сосед кричит во все горло в подъезде ночью и мешает спать.
+7. Planeerimisel *peame* kliendi vajadusi *silmas*. При планировании мы учитываем потребности клиента.
+8. Firma *teostab* testid sel nädalal. Компания проводит тесты на этой неделе.
+9. Uus *piirang* keelab parkimise öösiti. Новое ограничение запрещает парковку ночью.
+10. Seadme *paigaldus* võtab umbes kaks tundi. Установка устройства занимает около двух часов.
+11. Kass *poeb* laua alla, kui külalised tulevad. Кот заползает под стол, когда приходят гости.
+12. Hoone on *muinsuskaitse* all, seega remont vajab luba. Здание находится под охраной памятников старины, поэтому ремонт требует разрешения.
+13. Hind *oleneb* töömahust. Цена зависит от объема работы.
+14. Me *kolime* sügisel uude *asumisse*. Мы переезжаем осенью в новый микрорайон.
